Projet GL/Projet_GL/src/test/deca/context/valid/increment2/float-op-float-int.deca
// Test : type_arith_op(float, int) = float

// Resultats : 5.6

//Historique : cree le 09/01/2023

{
    int a = 2;
    float b,c;

    b = 3.6;

    c = b + a;
}